crates/muxsmith-cli/tests/snapshots/run_cli__bad_regex_profile_with_missing_mkvmerge_exits_two_without_executing_a_job.snap
---
source: crates/muxsmith-cli/tests/run_cli.rs
expression: stdout
---
[error] input.pattern: Invalid regular expression: regex parse error: S(?<s>\d{2}E(?<e>\d{2}) ^ error: unclosed group
