crates/muxsmith-cli/tests/snapshots/run_cli__run_human_mode_speaks_on_an_empty_source_dir_instead_of_staying_silent.snap
---
source: crates/muxsmith-cli/tests/run_cli.rs
expression: stdout
---
0 files matched (searched [TMPDIR], extensions mkv)
